projects/microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /currency-exchange
        backend:
          service:
            name: currency-exchange
            port:
              number: 8000 
      - pathType: Prefix
        path: /currency-conversion
        backend:
          service:
            name: currency-conversion
            port:
              number: 8100
